k8s/00-namespace-config-secret.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
